src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__pg_legacy_char__cast_pg_legacy_char_to_char.snap
---
source: src/expr/src/scalar/func/impls/pg_legacy_char.rs
expression: "#[sqlfunc(\n    sqlname = \"\\\"char\\\"_to_char\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToPgLegacyChar)\n)]\nfn cast_pg_legacy_char_to_char(a: PgLegacyChar) -> Result<Char<String>, EvalError> {\n    let mut buf = String::new();\n    format_pg_legacy_char(&mut buf, a.0)?;\n    Ok(Char(buf))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastPgLegacyCharToChar;
impl crate::func::EagerUnaryFunc for CastPgLegacyCharToChar {
    type Input<'a> = PgLegacyChar;
    type Output<'a> = Result<Char<String>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_pg_legacy_char_to_char(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToPgLegacyChar)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastPgLegacyCharToChar {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("\"char\"_to_char")
    }
}
fn cast_pg_legacy_char_to_char(a: PgLegacyChar) -> Result<Char<String>, EvalError> {
    let mut buf = String::new();
    format_pg_legacy_char(&mut buf, a.0)?;
    Ok(Char(buf))
}
