src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__pg_legacy_char__cast_pg_legacy_char_to_int32.snap
---
source: src/expr/src/scalar/func/impls/pg_legacy_char.rs
expression: "#[sqlfunc(\n    sqlname = \"\\\"char\\\"_to_integer\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastInt32ToPgLegacyChar)\n)]\nfn cast_pg_legacy_char_to_int32(a: PgLegacyChar) -> i32 {\n    i32::from(i8::from_ne_bytes([a.0]))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastPgLegacyCharToInt32;
impl crate::func::EagerUnaryFunc for CastPgLegacyCharToInt32 {
    type Input<'a> = PgLegacyChar;
    type Output<'a> = i32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_pg_legacy_char_to_int32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastInt32ToPgLegacyChar)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastPgLegacyCharToInt32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("\"char\"_to_integer")
    }
}
fn cast_pg_legacy_char_to_int32(a: PgLegacyChar) -> i32 {
    i32::from(i8::from_ne_bytes([a.0]))
}
